--- a/Registry/conf/application.conf
+++ b/Registry/conf/application.conf
@@ -42,12 +42,12 @@ application.langs="en"
 # db.default.jndiName=DefaultDS
 
 # db.default.driver=com.mysql.jdbc.Driver
-# db.default.url="jdbc:mysql://localhost/registry"
-# db.default.user=registry
-# db.default.pass=registry
+# db.default.url="jdbc:mysql://localhost/ibf"
+# db.default.user=ibf
+# db.default.pass=ibf
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="mysql://registry:registry@localhost/registry"
+db.default.url="mysql://ibf:ibf@localhost/ibf"
 
 # Evolutions
 # ~~~~~
