--- a/InvisibleBattlefieldsClient/AndroidManifest.xml
+++ b/InvisibleBattlefieldsClient/AndroidManifest.xml
@@ -7,7 +7,16 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-
+   
+    <permission
+        android:name="lac.puc.ubi.invisiblebattlefields.concept.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="lac.puc.ubi.invisiblebattlefields.concept.permission.MAPS_RECEIVE" />
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	
     <application
         android:allowBackup="true"
         android:name="lac.puc.ubi.invbat.concept.app.InvBatApplication"
