--- a/InvisibleBattlefieldsClient/AndroidManifest.xml
+++ b/InvisibleBattlefieldsClient/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="lac.puc.ubi.invbat.concept.activities.AuthScreen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,11 +35,18 @@
         </activity>
         <activity 
             android:name="lac.puc.ubi.invbat.concept.activities.MainMenuScreen"
-            android:label="IB - Menu Principal"/>
+            android:label="IB - Menu Principal"
+            android:screenOrientation="portrait"/>
         
         <activity 
             android:name="lac.puc.ubi.invbat.concept.activities.RegistrationScreen"
-            android:label="IB - Cadastro de Novo Usuário"/>
+            android:label="IB - Cadastro de Novo Usuário"
+            android:screenOrientation="portrait"/>
+        
+        <activity 
+            android:name="lac.puc.ubi.invbat.concept.activities.BattleScreen"
+            android:label="IB - Batalha"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
